--- a/sevices/security-advisory.html
+++ b/sevices/security-advisory.html
@@ -142,7 +142,7 @@
 
             <br>
             <p style="text-align: right;">
-              <a href="../news.html">View all Services</a>
+              <a href="../cyber_security.html">View all Services</a>
             </p>
 
           </section>
