--- a/services/security-advisory.html
+++ b/services/security-advisory.html
@@ -77,7 +77,7 @@
                 organisation’s cyber threats and the impact as well as guide deployment of secure technology solutions.
               </p>
               <p class="service__info__question" data-animation="paragraph">
-                Why Five Eyes Security Advisory?
+                Why Five Eyes?
               </p>
 
               <p class="service__info__answer" data-animation="paragraph">
